# comfyui-replicate

./: LICENSE  README.md  __init__.py  import_schemas.py  node.py  pyproject.toml  requirements.txt  schema_to_node.py  supported_models.json
example_workflows/: bark_and_musicgen.json  flux.json  llama3-405b.json  llama3-with-positive-feedback-loop.json  simple-garment-try-on.json  simple-llama3.json  simple-llava.json
schemas/: ai-forever_kandinsky-2.2.json  ai-forever_kandinsky-2.json  andreasjansson_blip-2.json  batouresearch_high-resolution-controlnet-tile.json  batouresearch_magic-image-refiner.json  batouresearch_magic-style-transfer.json  black-forest-labs_flux-1.1-pro.json  black-forest-labs_flux-dev.json  black-forest-labs_flux-pro.json  black-forest-labs_flux-schnell.json  bytedance_sdxl-lightning-4step.json  cjwbw_hyper-sdxl-1step-t2i.json  cjwbw_pixart-sigma.json  cjwbw_seamless_communication.json  cjwbw_supir.json  cuuupid_glm-4v-9b.json  cuuupid_idm-vton.json  declare-lab_tango.json  fofr_consistent-character.json  fofr_controlnet-preprocessors.json  fofr_face-to-many.json  fofr_latent-consistency-model.json  fofr_sd3-with-chaos.json  fofr_style-transfer.json  fofr_toolkit.json  fofr_tooncrafter.json  fofr_ultrapixel.json  ideogram-ai_ideogram-v2-turbo.json  ideogram-ai_ideogram-v2.json  lucataco_hunyuandit-v1.1.json  lucataco_llama-3-vision-alpha.json  lucataco_magnet.json  lucataco_moondream2.json  lucataco_paligemma-3b-pt-224.json  lucataco_pasd-magnify.json  lucataco_qwen-vl-chat.json  lucataco_sdxl-clip-interrogator.json  lucataco_xtts-v2.json  (+27 more)
